test/occurs-check.ktn
define f (int int -> int) {
  (+)
}

define g (-> int) {
  { 1 f } h
}

define h ((-> int) -> int) {
  apply
}
